--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,29 @@
     <title>Sweetkeebz Forum</title>
 </head>
 <body>
+    <header>
+        <h1>Sweetkeebz Forum</h1>
+        <nav>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">login</a></li>
+            </ul>
+        </nav>
+    </header>
     <div>
         {% block content %}
         <!--posts go here-->
         {% endblock %}
     </div>
+    <footer>
+        <ul>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
