--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,10 @@
 {% block content %}
     {% for post in post_list %}
         <div class="post">
-            <a href="">
+            <a href="{% url 'full_post' post.slug %}">
                 <h3 class="post-title">{{ post.title }}</h3>
-                <p>{{ post.author }}</p>
+                <p>Posted by:{{ post.author }} on {{ post.created_on }}</p>
                 <p>{{ post.content }}</p>
-                <p>{{ post.created_on }}</p>
             </a>
         </div>
         <hr>
