added the model and view code for comments, also provided url for post.html

--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,7 @@
 <a href="#"><i class="fa-regular fa-triangle"></i><i class="fa-solid fa-triangle"></i></a>
 <p>{{ post.content }}</p>
 <!--here are the comments-->
-{% for comment in comment_list %}
+{% for comment in comments %}
     <h3>{{ comment.author }}</h3>
     <p>{{ comment.comment }}</p>
     <p>{{ comment.created_on }}</p>
