--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,12 @@
         <div class="post">
             <a href="{% url 'full_post' post.slug %}">
                 <h3 class="post-title">{{ post.title }}</h3>
-                <p>Posted by: {{ post.author }} on {{ post.created_on }}</p>
+                <p class="info">Posted by: {{ post.author }} on {{ post.created_on }}</p>
                 <p>{{ post.content }}</p>
+                <img src="{{ post.image.url }}" style="max-height: 300px" alt="image">
             </a>
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         options
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -27,6 +28,7 @@
                     <button type="submit" name="upvote" value="{{ post.id }}" class="btn btn-secondary"><i class="fa-solid fa-caret-up"></i></button>
                 {% endif %}
             </form>
+            <span>{{ post.vote_result }}</span>
             <form action="{% url 'downvote' post.slug %}" method="POST">
                 {% csrf_token %}
                 {% if downvoted  %}
