--- a/templates/post-editor.html
+++ b/templates/post-editor.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form action="add" method="POST">
+<form action="add" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Post"></input>
