--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <!-- style -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/cleanblog.css' %}">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Sweetkeebz Forum</title>
 </head>
 <body>
