--- a/templates/post-editor.html
+++ b/templates/post-editor.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<form action="add" method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Post"></input>
-</form>
+<div class="form-container">
+    <form action="add" method="POST" enctype="multipart/form-data" class="post-form">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Post"></input>
+    </form>
+</div>
 
 {% endblock %}
