--- a/templates/post.html
+++ b/templates/post.html
@@ -3,48 +3,62 @@
 {% block content %}
 
 <!--so this is the actual post-->
-<h2>{{ post.title }}</h2>
-<p>Posted by: {{ post.author }} on {{ post.created_on }}</p>
-<p>{{ post.content }}</p>
-<img src="{{ post.image.url }}" style="max-height: 300px" alt="image">
-<form action="{% url 'upvote' post.slug %}" method="POST">
-    {% csrf_token %}
-    {% if upvoted  %}
-        <button type="submit" name="post_upvote" value="{{ post.id }}" class="btn btn-dark"><i class="fa-solid fa-caret-up"></i></button>
-    {% else %}
-        <button type="submit" name="post_upvote" value="{{ post.id }}" class="btn btn-secondary"><i class="fa-solid fa-caret-up"></i></button>
-    {% endif %}
-</form>
-<span>{{ post.vote_result }}</span>
-<form action="{% url 'downvote' post.slug %}" method="POST">
-    {% csrf_token %}
-    {% if downvoted  %}
-        <button type="submit" name="downvote" value="{{ post.id }}" class="btn btn-dark"><i class="fa-solid fa-caret-down"></i></button>
-    {% else %}
-        <button type="submit" name="downvote" value="{{ post.id }}" class="btn btn-secondary"><i class="fa-solid fa-caret-down"></i></button>
-    {% endif %}
-</form>
-<hr>
-<form method="POST">
-    {{ add_comment }}
-    {% csrf_token %}
-    <input type="submit" value="Comment">
-</form>
+<div class="card" style="width: 50%">
+    <div class="card-body">
+        <h2 class="card-title">{{ post.title }}</h2>
+        <blockquote>Posted by: {{ post.author }} on {{ post.created_on }}</blockquote>
+        <p class="card-text">{{ post.content }}</p>
+    </div>
+    <img src="{{ post.image.url }}" style="max-height: 300px" alt="image" class="card-img-top">
+    <form action="{% url 'upvote' post.slug %}" method="POST">
+        {% csrf_token %}
+        {% if upvoted  %}
+            <button type="submit" name="post_upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
+        {% else %}
+            <button type="submit" name="post_upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
+        {% endif %}
+    </form>
+    <span>{{ post.vote_result }}</span>
+    <form action="{% url 'downvote' post.slug %}" method="POST">
+        {% csrf_token %}
+        {% if downvoted  %}
+            <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
+        {% else %}
+            <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
+        {% endif %}
+    </form>
+    <hr>
+        {% if not editing %}
+            <form method="POST" class="comment-form" action="{% url 'add-comment' post.slug %}">
+                {{ form }}
+                {% csrf_token %}
+                <input type="submit" value="comment">
+            </form>
+        {% endif %}
+</div>
 <hr>
 <!--here are the comments-->
-{% for comment in comments %}
-    <p> commented by: <a href="#">{{ comment.author }}</a> on: {{ comment.created_on }}</p>
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            options
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="{% url 'edit-comment' post.slug comment.id %}">Edit</a>
-            <a class="dropdown-item" href="{% url 'delete-comment' post.slug comment.id %}">Delete</a>
+{% if not editing %}
+    {% for comment in comments %}
+        <p> commented by: <a href="#">{{ comment.author }}</a> on: {{ comment.created_on }}</p>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                options
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="{% url 'edit-comment' post.slug comment.id %}">Edit</a>
+                <a class="dropdown-item" href="{% url 'delete-comment' post.slug comment.id %}">Delete</a>
+            </div>
         </div>
-    </div>
-    <p>{{ comment.comment }}</p>
-    <hr>
-{% endfor %}
+        <p>{{ comment.comment }}</p>
+        <hr>
+    {% endfor %}
+{% else %}
+    <form method="POST" class="comment-form" action="{% url 'edit-comment' post.slug comment.id %}">
+        {{ edit_form }}
+        {% csrf_token %}
+        <input type="submit" value="save changes">
+    </form>
+{% endif %}
 
 {% endblock %}
