--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,14 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
 
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'add' %}">Create Post</a>
+                        {% else %}
+                        <a href="{% url 'account_login' %}" class="nav-link">Create Post</a>
+                        {% endif %}
+                    </li>
+
                     {% if user.is_authenticated %}
 
                     <li class="nav-item">
@@ -46,9 +54,8 @@
 
                     {% endif %}
 
-
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'add' %}">Create Post</a>
+                        <a class="nav-link" href="{% url 'user-profile' %}">Profile</a>
                     </li>
                 </ul>
             </div>
