--- a/templates/post.html
+++ b/templates/post.html
@@ -3,44 +3,65 @@
 {% block content %}
 
 <!--so this is the actual post-->
-<div class="card" style="width: 50%">
-    <div class="card-body">
-        <h2 class="card-title">{{ post.title }}</h2>
-        <blockquote>Posted by: {{ post.author }} on {{ post.created_on }}</blockquote>
-        <p class="card-text">{{ post.content }}</p>
+<div class="card-container">
+    <div class="card post">
+        <div class="vote">
+            {% if user.is_authenticated %}
+                <form action="{% url 'upvote' post.slug %}" method="POST">
+            {% else %}
+                <form action="{% url 'account_login' %}">
+            {% endif %}
+                {% csrf_token %}
+                {% if upvoted  %}
+                    <button type="submit" name="post_upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up" style="color: #0085A1;"></i></button>
+                {% else %}
+                    <button type="submit" name="post_upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
+                {% endif %}
+            </form>
+            <span>{{ post.vote_result }}</span>
+            {% if user.is_authenticated %}
+                <form action="{% url 'downvote' post.slug %}" method="POST">
+            {% else %}
+                <form action="{% url 'account_login' %}">
+            {% endif %}
+                {% csrf_token %}
+                {% if downvoted  %}
+                    <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down" style="color: #0085A1;"></i></button>
+                {% else %}
+                    <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
+                {% endif %}
+            </form>
+        </div>
+        <div class="content">
+            <h2 class="card-title">{{ post.title }}</h2>
+            <blockquote>Posted by: {{ post.author }} on {{ post.created_on }}</blockquote>
+            <p class="card-text">{{ post.content }}</p>
+        <img src="{{ post.image.url }}" style="max-height: 300px" alt="image">
+        </div>
     </div>
-    <img src="{{ post.image.url }}" style="max-height: 300px" alt="image" class="card-img-top">
-    <form action="{% url 'upvote' post.slug %}" method="POST">
-        {% csrf_token %}
-        {% if upvoted  %}
-            <button type="submit" name="post_upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
-        {% else %}
-            <button type="submit" name="post_upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
-        {% endif %}
-    </form>
-    <span>{{ post.vote_result }}</span>
-    <form action="{% url 'downvote' post.slug %}" method="POST">
-        {% csrf_token %}
-        {% if downvoted  %}
-            <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
-        {% else %}
-            <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
-        {% endif %}
-    </form>
-    <hr>
-        {% if not editing %}
-            <form method="POST" class="comment-form" action="{% url 'add-comment' post.slug %}">
+</div>
+<hr>
+<div class="card-container">
+    {% if not editing %}
+        <div class="post">
+            {% if user.is_authenticated %}
+                <form method="POST" class="comment-form" action="{% url 'add-comment' post.slug %}">
+            {% else %}
+                <form action="{% url 'account_login' %}">
+            {% endif %}
                 {{ form }}
                 {% csrf_token %}
                 <input type="submit" value="comment">
             </form>
-        {% endif %}
+        </div>
+    {% endif %}
 </div>
 <hr>
 <!--here are the comments-->
 {% if not editing %}
     {% for comment in comments %}
         <p> commented by: <a href="#">{{ comment.author }}</a> on: {{ comment.created_on }}</p>
+        {% if user.is_authenticated %}
         <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 options
@@ -50,6 +71,7 @@
                 <a class="dropdown-item" href="{% url 'delete-comment' post.slug comment.id %}">Delete</a>
             </div>
         </div>
+        {% endif %}
         <p>{{ comment.comment }}</p>
         <hr>
     {% endfor %}
