--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="card-container">
-    {% for post in post_list %}
+    <a href="{% url 'edit-profile' %}">Edit Profile</a>
+    <h1>{{ user.username }}</h1>
+    <p>{{ profile.about }}</p>
+    <img src="{{ profile.avatar }}" alt="profile-picture" style="height: 300px; width: 300px;">
+    {% for post in posts %}
+        <p>Hello!</p>
         <div class="card post">
             <div class="vote">
                 {% if user.is_authenticated %}
@@ -55,5 +59,4 @@
                 {% endif %}
         </div>
     {% endfor %}
-</div>
 {% endblock %}
