--- a/templates/base.html
+++ b/templates/base.html
@@ -20,21 +20,20 @@
     <title>Sweetkeebz Forum</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-        <div class="container-fluid">
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+        <div class="container px-4 px-lg-5" id="mainNav">
             <a class='navbar-brand' href="{% url 'home' %}">Sweetkeebz Forum</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#content" aria-controls="content" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
             </button>
-            <div class="collapse navbar-collapse" id="content">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto py-4 py-lg-0">
 
                     <li class="nav-item">
                         {% if user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'add' %}">Create Post</a>
+                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'add' %}">Create Post</a>
                         {% else %}
                         <a href="{% url 'account_login' %}" class="nav-link">Create Post</a>
                         {% endif %}
@@ -43,34 +42,36 @@
                     {% if user.is_authenticated %}
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'account_logout' %}">Logout</a>
                     </li>
 
                     {% else %}
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'account_login' %}">Login</a>
                     </li>
 
                     {% endif %}
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user-profile' %}">Profile</a>
+                        <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'user-profile' %}">Profile</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    {% if user.is_authenticated %}
-
-    <p>logged in as: {{ user }}</p>
-
-    {% else %}
-
-    <p>you are currently not logged in</p>
-
-    {% endif %}
+    <!-- header -->
+    <header class="masthead" style="background-image: url(static/images/header-image.jpg)">
+        <div class="container position-relative px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    <div class="site-heading">
+                        <h1>Sweetkeebz Forum</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
         {% block content %}
         <!--posts go here-->
         {% endblock %}
