--- a/templates/index.html
+++ b/templates/index.html
@@ -1,59 +1,65 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="card-container">
-    {% for post in post_list %}
-        <div class="card post">
-            <div class="vote">
-                {% if user.is_authenticated %}
-                <form action="{% url 'out-upvote' post.slug %}" method="POST" class="upvote">
-                {% else %}
-                <form action="{% url 'account_login' %}">
-                {% endif %}
-                    {% csrf_token %}
-                    {% if upvoted  %}
-                        <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up" style="color: #0085A1;"></i></button>
-                    {% else %}
-                        <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
-                    {% endif %}
-                </form>
-                <span>{{ post.vote_result }}</span>
-                {% if user.is_authenticated %}
-                <form action="{% url 'downvote' post.slug %}" method="POST" class="downvote">
-                {% else %}
-                <form action="{% url 'account_login' %}">
-                {% endif %}
-                    {% csrf_token %}
-                    {% if downvoted  %}
-                        <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down" style="color: #0085A1;"></i></button>
-                    {% else %}
-                        <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
-                    {% endif %}
-                </form>
-            </div>
-            <div class="content">
-                <a href="{% url 'full_post' post.slug %}">
-                    <p class="info">Posted by: {{ post.author }} on {{ post.created_on }}</p>
-                    <h3 class="card-title">{{ post.title }}</h3>
-                    <p>{{ post.content }}</p>
-                    {% if post.image != 'placeholer' %}
-                        <img src="{{ post.image.url }}" style="max-height: 300px" alt="No image attatched">
-                    {% endif %}
-                </a>
-                <a href="{% url 'full_post' post.slug %}" class="comment-button"><i class="fa-regular fa-message-dots"></i>Comment</a>
-            </div>
-                {% if user.is_authenticated %}
-                    <div class="dropdown">
-                        <button class='three-dot-button' type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fa-solid fa-ellipsis-vertical"></i>
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="{% url 'edit' post.slug %}">Edit</a>
-                            <a class="dropdown-item" href="{% url 'delete' post.slug %}">Delete</a>
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                {% for post in post_list %}
+                    <div class="post">
+                        <div class="vote">
+                            {% if user.is_authenticated %}
+                            <form action="{% url 'out-upvote' post.slug %}" method="POST" class="upvote">
+                            {% else %}
+                            <form action="{% url 'account_login' %}">
+                            {% endif %}
+                                {% csrf_token %}
+                                {% if upvoted  %}
+                                    <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up" style="color: #0085A1;"></i></button>
+                                {% else %}
+                                    <button type="submit" name="upvote" value="{{ post.id }}"><i class="fa-solid fa-caret-up"></i></button>
+                                {% endif %}
+                            </form>
+                            <span>{{ post.vote_result }}</span>
+                            {% if user.is_authenticated %}
+                            <form action="{% url 'downvote' post.slug %}" method="POST" class="downvote">
+                            {% else %}
+                            <form action="{% url 'account_login' %}">
+                            {% endif %}
+                                {% csrf_token %}
+                                {% if downvoted  %}
+                                    <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down" style="color: #0085A1;"></i></button>
+                                {% else %}
+                                    <button type="submit" name="downvote" value="{{ post.id }}"><i class="fa-solid fa-caret-down"></i></button>
+                                {% endif %}
+                            </form>
                         </div>
+                        <div class="content">
+                            <a href="{% url 'full_post' post.slug %}">
+                                <p class="info">Posted by: {{ post.author }} on {{ post.created_on }}</p>
+                                <h3 class="card-title">{{ post.title }}</h3>
+                                <p>{{ post.content }}</p>
+                                {% if post.image != 'placeholer' %}
+                                    <img src="{{ post.image.url }}" style="max-height: 300px" alt="No image attatched">
+                                {% endif %}
+                            </a>
+                            <a href="{% url 'full_post' post.slug %}" class="comment-button"><i class="fa-regular fa-message-dots"></i>Comment</a>
+                        </div>
+                            {% if user.is_authenticated %}
+                                <div class="dropdown">
+                                    <button class='three-dot-button' type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item" href="{% url 'edit' post.slug %}">Edit</a>
+                                        <a class="dropdown-item" href="{% url 'delete' post.slug %}">Delete</a>
+                                    </div>
+                                </div>
+                            {% endif %}
                     </div>
-                {% endif %}
+                    <hr class="my-4">
+                {% endfor %}
+            </div>
         </div>
-    {% endfor %}
+    </div>
 </div>
 {% endblock %}
