--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,6 +66,11 @@ p {
     flex-direction: column;
 }
 
+.edit-comment {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 /* profile */
 
 .profile {
